[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/gfx/boxes/confirmation_box.png" type="Texture" id=1]
[ext_resource path="res://assets/gfx/misc/grabber.png" type="Texture" id=2]
[ext_resource path="res://menu/class_size.gd" type="Script" id=3]
[ext_resource path="res://menu/label_font_style.tres" type="DynamicFont" id=4]
[ext_resource path="res://menu/menu_button_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/simple_rounded.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/gfx/buttons/okay_button.png" type="Texture" id=7]
[ext_resource path="res://assets/gfx/buttons/revert_button.png" type="Texture" id=8]
[ext_resource path="res://assets/gfx/buttons/menu_button.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 25
outline_size = 5
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="ClassSize" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -640.0
margin_bottom = -360.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.392157, 0.607843, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = -25.0
margin_bottom = -25.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 590.0
margin_bottom = 310.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 590.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
text = "Pick the class size"
align = 1

[node name="ClassSize" type="HSlider" parent="MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 590.0
margin_bottom = 71.0
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = 1.0
max_value = 50.0
value = 1.0
tick_count = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 75.0
margin_right = 590.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 10 )

[node name="GapButtonCT" type="CenterContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 89.0
margin_right = 590.0
margin_bottom = 142.0

[node name="SetGap" type="TextureButton" parent="MarginContainer/VBoxContainer/GapButtonCT"]
margin_left = 213.0
margin_right = 377.0
margin_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 9 )
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GapButtonCT"]
margin_left = 244.0
margin_top = 11.0
margin_right = 346.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 1 )
text = "Add gap"

[node name="GapSettings" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 89.0
margin_right = 590.0
margin_bottom = 192.0

[node name="GapLabel" type="Label" parent="MarginContainer/VBoxContainer/GapSettings"]
margin_right = 590.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 5 )
text = "Gap to skip"
align = 1

[node name="StartGap" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GapSettings"]
margin_top = 51.0
margin_right = 590.0
margin_bottom = 75.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GapSettings/StartGap"]
margin_right = 75.0
margin_bottom = 24.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Start"
align = 1

[node name="StartGap" type="HSlider" parent="MarginContainer/VBoxContainer/GapSettings/StartGap"]
margin_left = 79.0
margin_right = 590.0
margin_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = 1.0
max_value = 50.0
value = 1.0
tick_count = 1

[node name="StopGap" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GapSettings"]
margin_top = 79.0
margin_right = 590.0
margin_bottom = 103.0

[node name="StopGap" type="HSlider" parent="MarginContainer/VBoxContainer/GapSettings/StopGap"]
margin_right = 511.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
min_value = 1.0
max_value = 50.0
value = 1.0
tick_count = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GapSettings/StopGap"]
margin_left = 515.0
margin_right = 590.0
margin_bottom = 24.0
rect_min_size = Vector2( 75, 0 )
custom_fonts/font = ExtResource( 4 )
text = "Stop"
align = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 590.0
margin_bottom = 206.0
size_flags_vertical = 3

[node name="ButtonCT" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 210.0
margin_right = 590.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 100 )
alignment = 1

[node name="Back" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonCT"]
margin_right = 293.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Okay" type="TextureButton" parent="MarginContainer/VBoxContainer/ButtonCT"]
margin_left = 297.0
margin_right = 590.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[connection signal="value_changed" from="MarginContainer/VBoxContainer/ClassSize" to="." method="_on_ClassSize_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/GapButtonCT/SetGap" to="." method="_on_SetGap_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GapSettings/StartGap/StartGap" to="." method="_on_StartGap_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/GapSettings/StopGap/StopGap" to="." method="_on_StopGap_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonCT/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonCT/Okay" to="." method="_on_Okay_pressed"]
